# feature-structure

./: LICENSE  README.md  feature-structure.cabal
examples/: artifi.hs  grammar.hs  test-cmp.hs  test-equal.hs
src/NLP/FeatureStructure/: AVM.hs  Conv.hs  Core.hs  DisjSet.hs  Graph.hs  Graph2.hs  Ident.hs  Join.hs  Join2.hs  Parse.hs  Reid.hs  Reid2.hs  Tests.hs  Tree.hs  Unify.hs
src/NLP/FeatureStructure/AVM/: Tests.hs
src/NLP/FeatureStructure/Graph/: Draw.hs  Tests.hs
src/NLP/FeatureStructure/LFG/: Graph.hs  LexDesc.lhs
src/NLP/FeatureStructure/Parse/: Tests.hs
src/NLP/FeatureStructure/Tree/: Tests.hs
src/NLP/FeatureStructure/Unify/: Tests.hs
tests/: test.hs
tools/: draw-test.hs
