name:               feature-structure
version:            0.1.0
synopsis:           Feature structures
description:
    TODO
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2014 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/feature-structure
build-type:         Simple

library
    hs-source-dirs: src

    build-depends:
        base                    >= 4        && < 5
      , mtl                     >= 2.1      && < 2.2
      , transformers            >= 0.3      && < 0.4
      , containers              >= 0.5      && < 0.6
      , data-partition          >= 0.2      && < 0.3
      , errors                  >= 1.4      && < 1.5
      , pipes                   >= 4.1      && < 4.2
      , monad-atom              >= 0.4      && < 0.5
      , text                    >= 0.11     && < 0.12
      , vector                  >= 0.10     && < 0.11
      , data-memocombinators    >= 0.5      && < 0.6

    exposed-modules:
        NLP.FeatureStructure.Core
      , NLP.FeatureStructure.Tree
      , NLP.FeatureStructure.Tree.Tests
      , NLP.FeatureStructure.Graph
      , NLP.FeatureStructure.Join
      , NLP.FeatureStructure.Unify
      , NLP.FeatureStructure.Unify.Tests
      , NLP.FeatureStructure.Reid
      , NLP.FeatureStructure.Parse

    other-modules:
        NLP.FeatureStructure.DisjSet

    ghc-options: -Wall -O2

source-repository head
    type: git
    location: https://github.com/kawu/feature-structure.git
