name:               feature-structure
version:            0.2.0
synopsis:           Feature structures
description:
    TODO
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2014 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/feature-structure
build-type:         Simple

library
    hs-source-dirs: src

    build-depends:
        base                    >= 4        && < 5
      , mtl                     >= 2.1      && < 2.3
      , transformers            >= 0.3      && < 0.5
      , either                  >= 4.3
      , containers              >= 0.5      && < 0.6
      -- , data-partition          >= 0.2      && < 0.4
      , errors                  >= 1.4      && < 1.5
      , pipes                   >= 4.1      && < 4.2
      , monad-atom              >= 0.4      && < 0.5
      , text                    >= 0.11     && < 1.3
      , vector                  >= 0.10     && < 0.11
      , monad-memo              >= 0.4      && < 0.5
      , monad-loops             >= 0.4      && < 0.5
      -- , graphviz                >= 2999.16  && < 2999.17
      , SVGFonts                >= 1.5      && < 2.0
      , diagrams-svg            >= 1.3      && < 2.0
      , diagrams-lib            >= 1.3      && < 2.0

    exposed-modules:
        NLP.FeatureStructure.Core
      , NLP.FeatureStructure.Tree
      , NLP.FeatureStructure.AVM
      , NLP.FeatureStructure.Graph
      , NLP.FeatureStructure.Graph.Draw
      , NLP.FeatureStructure.Join
      , NLP.FeatureStructure.Unify
      , NLP.FeatureStructure.Reid

    other-modules:
        NLP.FeatureStructure.DisjSet

    ghc-options: -Wall -O2

test-suite test
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        tests
      , src
    main-is:
        test.hs
    build-depends:
        tasty                   >= 0.10
      , tasty-quickcheck        >= 0.8
      , tasty-hunit             >= 0.9
      , HUnit                   >= 1.2
      , QuickCheck              >= 2.6

source-repository head
    type: git
    location: https://github.com/kawu/feature-structure.git
